# Heureka

./: ALL_tuning_targets.csv
augmentum-main/: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  INSTALL.md  LICENSE  Makefile  README.md  environment.yml  requirements.txt  requirements_pre_commit.txt
augmentum-main/.github/workflows/: ci.yaml  pre_commit.yaml
augmentum-main/benchmarks/SNU_NPB/: README.md
augmentum-main/benchmarks/SNU_NPB/NPB3.3-SER-C/: .gitignore  clean.sh  compile.sh  run.sh
augmentum-main/benchmarks/SNU_NPB/NPB3.3-SER-C/BT/: Makefile  auto2_verify.c  bt.c  verify.c
augmentum-main/benchmarks/SNU_NPB/NPB3.3-SER-C/CG/: Makefile  auto2_verify.c  cg.c
augmentum-main/benchmarks/SNU_NPB/NPB3.3-SER-C/EP/: Makefile  auto2_verify.c  ep.c
augmentum-main/benchmarks/SNU_NPB/NPB3.3-SER-C/FT/: Makefile  auto2_verify.c  verify.c
augmentum-main/benchmarks/SNU_NPB/NPB3.3-SER-C/IS/: Makefile  auto2_verify.c  is.c
augmentum-main/benchmarks/SNU_NPB/NPB3.3-SER-C/LU/: Makefile  auto2_verify.c  verify.c
augmentum-main/benchmarks/SNU_NPB/NPB3.3-SER-C/MG/: Makefile  auto2_verify.c  mg.c
augmentum-main/benchmarks/SNU_NPB/NPB3.3-SER-C/SP/: Makefile  auto2_verify.c  verify.c
augmentum-main/benchmarks/SNU_NPB/direct_build/: .gitignore  README.md  build.sh  build_all.sh  clean.sh  env.config.template
augmentum-main/benchmarks/SNU_NPB/prebuild_bc/: .gitignore  README.md  build_binaries.sh  build_bitcode.sh  clean.sh  env.config.template  make.def
augmentum-main/benchmarks/llvm-test/: README.md
augmentum-main/benchmarks/llvm-test/CoyoteBench/: almabench.reference_output  almabench.reference_output.small  fftbench.reference_output  huffbench.reference_output  lpbench.reference_output
augmentum-main/benchmarks/polybench-c-4.2.1-beta/augmentum/: .gitignore  README.md  build.sh  build_all.sh  clean.sh  generate_verification.sh
augmentum-main/driver/: .gitignore  README.md  benchmark_profiler.py  function_analyser.py  generate_extension.py
augmentum-main/driver/augmentum/: AugmentumDB.py  __about__.py  augmentumUtils.py  benchmark_LLVM_verification.py  benchmark_SNU_make_conf.py  benchmark_SNU_verification.py  benchmark_polybench_verification.py  benchmarks.py  driver.py  function.py  functionfilter.py  heuristicDB.py  mplogging.py  objectives.py  paths.py  pathworker.py  priors.py  probes.py  sysProg.py  sysProgBuilders.py  sysUtils.py  targetfilter.py  testcasemanager.py  timer.py  type_descs.py  type_serialisation.py
augmentum-main/driver/config/: .gitignore  evaluation_config.json.template  target_filter.csv.template
augmentum-main/driver/mptools/: LICENSE  README.md  __init__.py  _mptools.py
augmentum-main/driver/scripts/: run_evaluation.sh  run_profiling.sh
augmentum-main/driver/test/: __init__.py  test_extensions.py  test_priors.py  test_probes.py  test_utils.py
augmentum-main/extensions/: CMakeLists.txt  README.md
augmentum-main/extensions/augmentum/: CMakeLists.txt  augmentum.cpp  augmentum.h  augmentum.input  internal.cpp  internal.h  python.cpp  type.cpp  type.h
augmentum-main/extensions/augmentum_llvmpass/: CMakeLists.txt  augmentum_llvmpass.cpp  instrumentation_stats.cpp  instrumentation_stats.h  python.cpp  should_instrument.cpp  should_instrument.h  should_instrument_prior.cpp  should_instrument_prior.h  type_serialisation.cpp  type_serialisation.h  utils.cpp  utils.h
augmentum-main/extensions/test/: CMakeLists.txt  Makefile  driver-instrumented.cpp  driver.cpp  explicit.cpp  extend.cpp  extend.py  extend_listener.py  should_instrument.py  speed-check.cpp  to-instrument.cpp  to-instrument.h
augmentum-main/tools/: CMakeLists.txt
augmentum-main/tools/fpcmp/: CMakeLists.txt  README.md  fpcmp.c
augmentum-main/tools/stlwrapper/: CMakeLists.txt  README.md  stlwrapper.c
